A little more contrast with grayscale filters for unactivated actions. https://github.com/bigtreecms/BigTree-CMS/issues/136

--- a/core/admin/css/main.css
+++ b/core/admin/css/main.css
@@ -1071,10 +1071,10 @@
 	#field_area hr { margin-top: 30px; }
 	.developer_action_list ul { list-style: none; margin: 0; }
 	.developer_action_list li { background: #FCFCFC; border: 1px solid #ccc; border-radius: 3px; float: left; margin: 0 5px 0 0; }
-	.developer_action_list li a.action { border-radius: 3px 3px 0 0; display: block; height: 36px; text-align: center; transition: background-color 0.2s; width: 36px; }
-	.developer_action_list li a.action:hover { background: #EBF2F6; }
+	.developer_action_list li a.action { border-radius: 3px 3px 0 0; display: block; filter: grayscale(100%); height: 36px; text-align: center; transition: background-color 0.2s, filter 0.2s; width: 36px; }
+	.developer_action_list li a.action:hover { background: #F3F3F3; }
 	.developer_action_list li a span { margin: 6px; opacity: 0.5; }
-	.developer_action_list li a.active { background: #FFF; border-color: #AAA; }
+	.developer_action_list li a.active { background: #FFF; border-color: #AAA; filter: grayscale(0%); }
 	.developer_action_list li a.active span { opacity: 1; }
 	.developer_action_list li .handle { background-color: #eee; border-radius: 0 0 2px 2px; border-top: 1px solid #ccc; bottom: #EEE; cursor: move; font-style: 10px; height: 14px; text-align: center; text-transform: uppercase; width: 36px; }
 	.developer_action_list li .handle .edit { background: url(../images/icon-sprite.svg) no-repeat -275px -105px; cursor: pointer; float: right; height: 10px; margin: 2px 4px 0 0; width: 10px; }
